[gd_scene load_steps=31 format=3 uid="uid://b3fb24dq1xkwt"]

[ext_resource type="Script" path="res://objects/scripts/rabbitball.gd" id="1_hsdp2"]
[ext_resource type="PhysicsMaterial" uid="uid://jl5ds7mq2rde" path="res://resources/rabbitball_phy_mat.tres" id="1_x2251"]
[ext_resource type="Texture2D" uid="uid://bx0at4jv0kn1u" path="res://assets/objects/rabbitball-r2.png" id="2_74228"]
[ext_resource type="Texture2D" uid="uid://dikbjh6owfqj6" path="res://assets/objects/rabbitball-idle-01-r0.png" id="3_3gcd1"]
[ext_resource type="Script" path="res://objects/deco/rabbitball-trail.gd" id="3_dc2kr"]
[ext_resource type="Texture2D" uid="uid://bcp1l0ei2bcs8" path="res://assets/world/particle_circle_02.png" id="6_6ei8x"]
[ext_resource type="Texture2D" uid="uid://557623wrq3h4" path="res://assets/world/particle_circle_01.png" id="7_xmdum"]
[ext_resource type="Texture2D" uid="uid://kbe4he0nby0f" path="res://assets/objects/rabbitball-dizzy-01.png" id="8_ms1jr"]
[ext_resource type="AudioStream" uid="uid://bfc830iau8123" path="res://audio/sfx/rabbitball_rolling_01.wav" id="8_nf72e"]
[ext_resource type="AudioStream" uid="uid://wctsa5kxvh8q" path="res://audio/sfx/rabbitball_landed_04.ogg" id="9_soln6"]
[ext_resource type="AudioStream" uid="uid://cbm77m5h8fbn3" path="res://audio/sfx/rabbitball_phased_one_way_platform.ogg" id="13_tte68"]
[ext_resource type="AudioStream" uid="uid://bmm1vdehnhkrr" path="res://audio/sfx/rabbitball_landed_ceiling_01.ogg" id="14_pqvwt"]
[ext_resource type="AudioStream" uid="uid://gl54aolmyhit" path="res://audio/sfx/rabbitball_landed_ceiling_02.ogg" id="15_xk1ks"]
[ext_resource type="AudioStream" uid="uid://ioti4320ws11" path="res://audio/sfx/rabbitball_landed_ceiling_03.ogg" id="16_clwit"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ygn0"]
radius = 27.074

[sub_resource type="Curve" id="Curve_0psy2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_44rqd"]
radius = 33.0606

[sub_resource type="Curve" id="Curve_x7i5s"]
_data = [Vector2(0, 0.406593), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_lc6na"]
_data = [Vector2(0.592437, 0.483516), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Gradient" id="Gradient_s0qfv"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_pwusx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_3gcd1")]
}

[sub_resource type="Animation" id="Animation_na7vb"]
resource_name = "bumper_hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("8_ms1jr"), ExtResource("3_3gcd1")]
}

[sub_resource type="Animation" id="Animation_sn4b0"]
resource_name = "went_out_rabbithole"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yioks"]
resource_name = "went_through_rabbithole"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.25, 0.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2ghq"]
_data = {
"RESET": SubResource("Animation_pwusx"),
"bumper_hit": SubResource("Animation_na7vb"),
"went_out_rabbithole": SubResource("Animation_sn4b0"),
"went_through_rabbithole": SubResource("Animation_yioks")
}

[sub_resource type="Animation" id="Animation_yphmo"]
resource_name = "RESET"

[sub_resource type="Animation" id="Animation_26dcx"]
resource_name = "flipper_hit"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [500.0],
"method": &"set_main_speed"
}, {
"args": [280.0],
"method": &"set_main_speed"
}]
}

[sub_resource type="Animation" id="Animation_2qf60"]
resource_name = "launcher_launched"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"start_ghost_timer"
}, {
"args": [false],
"method": &"start_ghost_timer"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_main_no_limit"
}, {
"args": [false],
"method": &"set_main_no_limit"
}]
}

[sub_resource type="Animation" id="Animation_ontnr"]
resource_name = "stop_start_no_limit"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_main_no_limit"
}, {
"args": [false],
"method": &"set_main_no_limit"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d6sda"]
_data = {
"RESET": SubResource("Animation_yphmo"),
"flipper_hit": SubResource("Animation_26dcx"),
"launcher_launched": SubResource("Animation_2qf60"),
"stop_start_no_limit": SubResource("Animation_ontnr")
}

[node name="RB" type="RigidBody2D"]
collision_layer = 32
collision_mask = 223
mass = 0.8
physics_material_override = ExtResource("1_x2251")
can_sleep = false
script = ExtResource("1_hsdp2")
rolling_sound_volume_limit = -14.0
rolling_sound_volume_min = -39.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_3gcd1")
offset = Vector2(0, -37.085)

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_74228")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1ygn0")

[node name="Trail" type="Line2D" parent="."]
top_level = true
z_index = -1
width = 20.0
width_curve = SubResource("Curve_0psy2")
default_color = Color(1, 1, 1, 0.5)
script = ExtResource("3_dc2kr")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 223

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_44rqd")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
self_modulate = Color(1, 1, 1, 0.395)
z_index = -1
amount = 16
randomness = 1.0
texture = ExtResource("6_6ei8x")
direction = Vector2(-1, 0)
gravity = Vector2(0, 98)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
scale_amount_curve = SubResource("Curve_x7i5s")

[node name="Dust" type="CPUParticles2D" parent="."]
self_modulate = Color(1, 1, 1, 0.395)
z_index = 1
emitting = false
amount = 4
lifetime = 0.8
one_shot = true
explosiveness = 1.0
texture = ExtResource("7_xmdum")
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 1)
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 30.0
scale_amount_curve = SubResource("Curve_lc6na")
color_ramp = SubResource("Gradient_s0qfv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g2ghq")
}

[node name="Sequence" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d6sda")
}
autoplay = "RESET"

[node name="Audio" type="Node2D" parent="."]

[node name="Rolling" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("8_nf72e")
bus = &"GameSound"

[node name="Landed" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("9_soln6")
volume_db = -27.273
bus = &"GameSound"

[node name="LandedCeiling1" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("14_pqvwt")
volume_db = -22.727
bus = &"GameSound"

[node name="LandedCeiling2" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("15_xk1ks")
volume_db = -22.727
bus = &"GameSound"

[node name="LandedCeiling3" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("16_clwit")
volume_db = -22.727
bus = &"GameSound"

[node name="WentThroughOnewayPlat" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("13_tte68")
volume_db = -23.636
